--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbus Sustainability</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Airbus Sustainability</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="styling.css">
+        <link rel="stylesheet" href="style.css">
+    </head>
     
-</body>
+    <body>
+        <!-- Navbar -->
+        <div class="navbar">
+            <div class="navbar__body flex">
+                <img src="/images/logo.svg" alt="" class="logo">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Who we are</a></li>
+                        <li><a href="features.html">What we do</a></li>
+                        <li><a href="docs.html">Innovation</a></li>
+                        <li><a href="docs.html">Sustainability</a></li>
+                        <li><a href="docs.html">Safety</a></li>
+                        <li><a href="docs.html">Products & Servces</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+
+
+
+
+
+    </body>
 </html>
